--- a/style4.css
+++ b/style4.css
@@ -5,11 +5,21 @@ body {
     text-indent: 26px;
 }
 .mm {
-    width: 500px;
-    height: 330px;
+    width: 600px;
+    height: 370px;
     margin-top: 40px;
 }
 h1 {
     font-size: 34px;
     margin-bottom: 26px;
+}
+
+.gif2 {
+    width: 600px;
+    height: 370px;
+}
+h5 {
+    text-align: center;
+    margin-left: 350px;
+    font-style: italic;
 }
