--- a/style.css
+++ b/style.css
@@ -36,11 +36,12 @@ body {
 h2 {
     font-size: 20px;
     text-indent: 4px;
-    font-family: 'Indie Flower', cursive;
+    font-family: 'Orbitron', sans-serif;
 }
 
 .imagesContainer{
-    margin-top: 40px
+    margin-top: 40px;
+    margin-bottom: 40px;
 }
 .nfllogo {
     width: 400px;
