--- a/style4.css
+++ b/style4.css
@@ -1,7 +1,25 @@
 body { 
     color: black;
     background-color: skyblue;
+    font-size: 20px;
+    text-indent: 26px;
 }
 .mm {
-    width: 900px;
+    width: 600px;
+    height: 370px;
+    margin-top: 40px;
+}
+h1 {
+    font-size: 34px;
+    margin-bottom: 26px;
+}
+
+.gif2 {
+    width: 600px;
+    height: 370px;
+}
+h5 {
+    text-align: center;
+    margin-left: 350px;
+    font-style: italic;
 }
